--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,6 @@
     <color name="colorAccent">#408c32</color>
     <color name="buttonText">#fff</color>
     <color name="sustentable">#33cc33</color>
-    <color name="electrica">#00bfff</color>
+    <color name="electrica">#c1d112</color>
     <color name="error_validacion">#ff0000</color>
 </resources>
