--- a/app/src/main/res/layout/content_principal.xml
+++ b/app/src/main/res/layout/content_principal.xml
@@ -24,17 +24,25 @@
 
                                 <!-- Cabecera del sistema -->
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:orientation="horizontal"
+                android:layout_gravity="center_horizontal">
 
                 <TextView
                     android:id="@+id/txt_bienvenido"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
                     android:text="@string/bienvenido"
-                    android:textSize="30sp" />
+                    android:textSize="25sp"
+                    android:layout_marginRight="5dp"/>
+                <TextView
+                    android:id="@+id/txt_user"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:text="@string/usuario"
+                    android:textSize="25sp" />
             </LinearLayout>
                                 <!-- Fin de la cabecera -->
 
