--- a/app/src/main/res/layout/activity_facturacion.xml
+++ b/app/src/main/res/layout/activity_facturacion.xml
@@ -6,4 +6,133 @@
     android:layout_height="match_parent"
     tools:context="com.example.miguelangel.savenergy.Facturacion">
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+                                        <!-- Contenedor Principal -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="15dp"
+            android:orientation="vertical" >
+
+                                        <!-- Contenedor de la cabecera -->
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_gravity="center_horizontal">
+
+                <TextView
+                    android:id="@+id/tv_titulo"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="30sp"
+                    android:text="@string/title"
+                    android:textColor="@color/colorPrimaryDark"/>
+            </LinearLayout>
+                                        <!-- Contenedor Principal -->
+
+                                        <!-- Contenedor de datos-->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="8dp"
+                android:orientation="vertical" >
+
+                <TextView
+                    android:id="@+id/tv_selecciona"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="15dp"
+                    android:textSize="20sp"
+                    android:text="@string/instruccion"
+                    android:textColor="@color/colorPrimary"/>
+
+                <Spinner
+                    android:id="@+id/sp_fecha"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="8dp"
+                    android:layout_marginTop="8dp" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="8dp"
+                    android:orientation="horizontal" >
+                        <TextView
+                            android:id="@+id/tv_periodo"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textSize="15sp"
+                            android:text="@string/periodo"
+                            android:textColor="@color/colorPrimary"
+                            android:layout_marginRight="8dp"/>
+                        <TextView
+                            android:id="@+id/tv_periodo_seleccionao"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textSize="15sp"
+                            android:text="@string/periodo_select"
+                            android:textColor="@color/colorPrimary"/>
+                </LinearLayout>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="10dp">
+
+                    <android.support.design.widget.TextInputLayout
+                        android:id="@+id/til_inicio"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="15dp"
+                        android:hint="@string/fecha_inicio"
+                        app:errorTextAppearance="@style/AppTheme.EditTextError">
+
+                        <EditText
+                            android:id="@+id/txt_inicio"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:inputType="textEmailAddress"
+                            android:layout_marginRight="5dp"/>
+                    </android.support.design.widget.TextInputLayout>
+
+                    <android.support.design.widget.TextInputLayout
+                        android:id="@+id/til_dias"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="15dp"
+                        android:hint="@string/dias"
+                        app:errorTextAppearance="@style/AppTheme.EditTextError">
+
+                        <EditText
+                            android:id="@+id/txt_dias"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:inputType="textEmailAddress" />
+                    </android.support.design.widget.TextInputLayout>
+
+                    <android.support.design.widget.TextInputLayout
+                        android:id="@+id/til_fin"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="15dp"
+                        android:hint="@string/fecha_termino"
+                        app:errorTextAppearance="@style/AppTheme.EditTextError">
+
+                        <EditText
+                            android:id="@+id/txt_fin"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:inputType="textEmailAddress" />
+                    </android.support.design.widget.TextInputLayout>
+            </LinearLayout>
+                                        <!-- Contenedor de datos -->
+        </LinearLayout>
+                                        <!-- Fin del contenedor Principal -->
+    </ScrollView>
 </android.support.constraint.ConstraintLayout>
