--- a/app/src/main/res/layout/content_principal.xml
+++ b/app/src/main/res/layout/content_principal.xml
@@ -55,11 +55,12 @@
 
                                 <!-- Contenedor horizontal de precios -->
                 <LinearLayout
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="25dp"
                     android:orientation="horizontal"
-                    android:padding="6dp">
+                    android:padding="6dp"
+                    android:layout_gravity="right">
 
                     <TextView
                         android:id="@+id/txt_precio_actual"
@@ -68,7 +69,7 @@
                         android:layout_marginEnd="5dp"
                         android:text="@string/precio_actual"
                         android:textColor="@color/colorPrimary"
-                        android:textSize="18sp" />
+                        android:textSize="15sp" />
 
                     <TextView
                         android:id="@+id/precio"
@@ -77,7 +78,7 @@
                         android:text="@string/precio"
                         android:layout_marginStart="5dp"
                         android:textColor="@color/colorPrimary"
-                        android:textSize="18sp" />
+                        android:textSize="15sp" />
 
                 </LinearLayout>
                                 <!-- Fin del contenedor horizontal de precios -->
@@ -109,13 +110,17 @@
                     android:layout_gravity=""
                     android:text="@string/consumo_diario"
                     android:textColor="@color/colorPrimary"
-                    android:textSize="20sp" />
+                    android:layout_marginRight="8dp"
+                    android:textSize="20sp"/>
 
-                <Spinner
-                    android:id="@+id/sp_fecha"
+                <TextView
+                    android:id="@+id/txt_fecha"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1" />
+                    android:layout_gravity=""
+                    android:text="@string/fecha"
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="20sp" />
             </LinearLayout>
                                 <!-- Fin del contenedor de selección fecha -->
 
@@ -154,7 +159,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="15dp"
                         android:layout_marginRight="5dp"
-                        android:text="0"
+                        android:text="15"
                         android:textColor="@color/electrica"
                         android:textSize="18sp" />
 
