-Adición de nuevas imagenes para banner. -Llenar Spinner con Datos de la BD

--- a/app/src/main/res/layout/activity_energia__consumida.xml
+++ b/app/src/main/res/layout/activity_energia__consumida.xml
@@ -41,7 +41,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="5dp"
-                    android:text="@string/consumo_diario"
+                    android:text="@string/consumo_ec"
                     android:textColor="@color/colorPrimary"
                     android:textSize="20sp" />
 
