--- a/app/src/main/res/layout/activity_inicio.xml
+++ b/app/src/main/res/layout/activity_inicio.xml
@@ -27,25 +27,11 @@
 
                     <ImageView
                         android:id="@+id/banner"
-                        android:layout_width="700dp"
-                        android:layout_height="70dp"
-                        android:layout_gravity="center_horizontal"
-                        app:srcCompat="@drawable/banner" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical">
-
-                    <ImageSwitcher
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="15sp"
-                        android:src="@drawable/logo"
-                        tools:layout_editor_absoluteX="8dp"
-                        tools:layout_editor_absoluteY="273dp" />
-
+                        android:layout_height="300dp"
+                        android:layout_gravity="center_horizontal"
+                        app:srcCompat="@drawable/ss1"
+                        android:contentDescription="@string/cuenta"/>
                 </LinearLayout>
 
                 <LinearLayout
