--- a/app/src/main/res/layout/content_principal.xml
+++ b/app/src/main/res/layout/content_principal.xml
@@ -96,10 +96,11 @@
 
                                 <!-- Contenedor de selección fecha -->
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
                 android:orientation="horizontal"
+                android:layout_gravity="center_horizontal"
                 android:padding="8dp">
 
                 <TextView
